Large update (remains largely unfinished though)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>manakin's alchemist dungeon</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
 <body>
-<h1>Prototype Message</h1>
-<p>Github pages test.</p>
+
+
+<div id="navigation">
+    <aside>
+        <button onclick="">Navigator</button>
+    </aside>
+</div>
+
+
+<div id="container">
+    <section id="avatarhead">
+        <img src="assets/catavatar.jpg" id="profileimage" height="200" width="200" alt="manakin's avatar">
+        <h2><a href="https://github.com/manakin404" target="_blank" id="username">@manakin404</a></h2>
+    </section>
+    <section id="poetry" style="border: 0;">
+        <span id="quote-text"></span><br>
+        <span id="quote-author"></span>
+    </section>
+    <blockquote>
+        <math>$6CO_2 + 6H_2O → C_6H_{12}O_6 + 6O_2$</math>
+    </blockquote>
+</div>
+
+
+
+
+<script src="scripts/quote.js"></script>
+
 </body>
 </html>
