new domain + name change

--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
 <div id="container">
     <section id="avatarhead">
         <img src="assets/catavatar.jpg" id="profileimage" height="200" width="200" alt="manakin's avatar">
-        <h2><a href="https://github.com/manakin404" target="_blank" id="username">@manakin404</a></h2>
+        <h2><a href="https://github.com/manakin404" target="_blank" id="username">@manakin</a></h2>
     </section>
     <section id="poetry" style="border: 0;">
         <span id="quote-text"></span><br>
         <span id="quote-author"></span>
     </section>
-    <blockquote>
-        <math>$6CO_2 + 6H_2O → C_6H_{12}O_6 + 6O_2$</math>
-    </blockquote>
 </div>
 
 
