Add zork-game to projects

--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                         </a>
                     </div>
                     <!-- Possibility to add more projects here -->
+                     <div class="project-card">
+                        <h3>zork-game</h3>
+                        <p>
+                            A text adventure game written in Java. 
+                        </p>
+                        <a href="https://github.com/manakin404/zork-game" target="_blank" class="project-link">
+                            See on GitHub →
+                        </a>
+                    </div>
                 </section>
             </div>
         </div>
